Scanner.close()